* LConfExport: redesign export strategy in regard of external scripts (mid.pl etc) #1874
* Possibility to delete a lconf property #1914
* add startTLS support #1916
* add tools for converting old to new ldap config format #2028
* add a note about the template tree to docs #2072
* add initscript for LConfSlaveSync to contrib/ #2076
* create a doc section describing config options for 1.3.0 #2088

FIXES
* Inheritance of disable values #589
* dash in customvars #736
* LConfSlaveExport.pl and Template Directory #879
* docs: install on suse #1187
* Import a NagiosQL filled objects.cache doesnt work #1189
* docs: installation of schema file #1191
* make output #1241
* Error in lconf_deploy.sh #1243
* missing attributes when exporting escalations #1572
* LConfImport does not create directories #1685
* Escalations in Servicegroups are not exported #1761
* LConfImport.pl.in missing semicolon #1767
* LConfImport does not allow contacts without alias #1769
* use etc::config / lib::... only works with /usr/local/LConf prefix #1798
* add m4/version.m4 macro and remove hardcoded versions #1830
* replace bare install call in Makefile with AC_PROG_INSTALL and install-sh #1832
* LConfSlaveSync: checkresult spool dir directIO does not work #1868
* Hostgroup/servicegroup generation broken #1898
* Hashes like "description" are overwritten (change to additive inheritance) #1992
* LConfImport: fails on timeperiod exclude definition #2006
* create Changelog #2030

CHANGES
* create doc/ and add README,. move LICENSE there #1834
* move *.pl to $prefix/bin #1836


1.2.0 - 18/11/2011

ENHANCEMENTS
* missing support for notification escalation #295
* LConfSlaveExport - check target dir #311
* Export LDAP functions to a perl lib #325
* Exclude for LConfSlaveExport.pl #330
* Import of Customvars #363
* Improve LConfImport.pl's CleanUp Mode #364
* Hostgroups in hostgroups #392
* service attribute "obsess_over_service" #396