@@ -33,6 +33,7 @@ ENHANCEMENTS
 * add a note about the template tree to docs #2072
 * add initscript for LConfSlaveSync to contrib/ #2076
 * create a doc section describing config options for 1.3.0 #2088
+* LConfSlaveSync: add configure options for pidfile and debug log #2090
 
 FIXES
 * Inheritance of disable values #589
